# test-apis

azure-api-clients/: api_auth.py  graph_client.py  monitor_client.py  response_check.py  sentinel_client.py
azure_api_clients/: api_auth.py  law_query.py  messages.py  pyproject.toml  response_check.py  sentinel_client.py
azure_api_clients/azure_api_clients/: graph_client.py  messages.py  monitor_client.py
