[tool.poetry]
name = "azure-api-clients"
version = "0.1.0"
description = ""
authors = ["DerekSwenningsen <derek.swenningsen@meetascent.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pandas = "^2.2.1"
azure-core = "^1.30.0"
azure-identity = "^1.15.0"
azure-mgmt-monitor = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
